--- a/index.html
+++ b/index.html
@@ -705,8 +705,8 @@
       <section id="Guarantee">
         <div class="guarantee-wrapper section-spacing">
           <div class="container">
-            <div class="row px-lg-5">
-              <div class="col-lg-6 col-xl-5">
+            <div class="row guarantee-container">
+              <div class="col-lg-6">
                 <div class="guarantee-content">
                   <h2>
                     No Collection, <br />
@@ -1092,9 +1092,197 @@
       </section>
 
       <!-- Work Section HTML End -->
+
+      <!-- FAQ Section HTML Start -->
+
+      <section id="FAQ">
+        <div class="faq-wrapper section-spacing">
+          <div class="container">
+            <div class="row">
+              <div class="col-lg-6">
+                <div class="faq-content">
+                  <h2>Debt Collection Experts - Frequently Asked Questions.</h2>
+                  <p>
+                    Here are some frequently asked questions (FAQs) that might
+                    be relevant for DebtCollection, Debt Recovery and Debt
+                    collectors
+                  </p>
+                </div>
+              </div>
+              <div class="col-lg-6"></div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <!-- FAQ Section HTML End -->
     </main>
 
     <!-- Main Part HTML End -->
+
+    <!-- Footer Part HTML Start -->
+
+    <footer id="Footer">
+      <div class="footer-wrapper section-spacing">
+        <div class="container">
+          <div class="row">
+            <div class="col-12 col-lg-4">
+              <div class="footer-menu">
+                <h6>Debt Collection Services</h6>
+                <div class="footer-nav">
+                  <ul>
+                    <li>
+                      <a
+                        href="https://www.debtcollectionexperts.com.au/commercial-debt-collection.html"
+                        >Commercial Debt Collection</a
+                      >
+                    </li>
+                    <li>
+                      <a
+                        href="https://www.debtcollectionexperts.com.au/debt-collection.html"
+                        >Debt Collection</a
+                      >
+                    </li>
+                    <li>
+                      <a
+                        href="https://www.debtcollectionexperts.com.au/debt-collection-agency.html"
+                        >Debt Collection Agency</a
+                      >
+                    </li>
+                    <li>
+                      <a
+                        href="https://www.debtcollectionexperts.com.au/debt-collector.html"
+                        >Debt Collectors</a
+                      >
+                    </li>
+                    <li>
+                      <a
+                        href="https://www.debtcollectionexperts.com.au/debt-recovery.html"
+                        >Debt Recovery</a
+                      >
+                    </li>
+                    <li>
+                      <a
+                        href="https://www.debtcollectionexperts.com.au/personal-debt-collection.html"
+                        >Personal Debt Collection</a
+                      >
+                    </li>
+                    <li>
+                      <a
+                        href="https://www.debtcollectionexperts.com.au/small-busniess-debt-collection.html"
+                        >Small Business Debt Collection</a
+                      >
+                    </li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+            <div class="col-6 col-lg-2">
+              <div class="footer-menu">
+                <h6>Locations</h6>
+                <div class="footer-nav">
+                  <ul>
+                    <li>
+                      <a
+                        href="https://www.debtcollectionexperts.com.au/hobart.html"
+                        >Hobart</a
+                      >
+                    </li>
+                    <li>
+                      <a
+                        href="https://www.debtcollectionexperts.com.au/launceston.html"
+                        >Launceston</a
+                      >
+                    </li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+            <div class="col-6 col-lg-2">
+              <div class="footer-menu">
+                <h6>About us</h6>
+                <div class="footer-nav">
+                  <ul>
+                    <li>
+                      <a
+                        href="https://www.debtcollectionexperts.com.au/about-us.html"
+                        >About us</a
+                      >
+                    </li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+            <div class="col-6 col-lg-2">
+              <div class="footer-menu">
+                <h6>Contact us</h6>
+                <div class="footer-nav">
+                  <ul>
+                    <li>
+                      <a
+                        href="https://www.debtcollectionexperts.com.au/contact-us.html#Contact"
+                        >Email us</a
+                      >
+                    </li>
+                    <li><a href="tel:123456789">Call us</a></li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+            <div class="col-6 col-lg-2">
+              <div class="footer-menu">
+                <h6>Legal</h6>
+                <div class="footer-nav">
+                  <ul>
+                    <li>
+                      <a
+                        href="https://www.debtcollectionexperts.com.au/privacy-policy.html"
+                        >Privacy Policy</a
+                      >
+                    </li>
+                    <li>
+                      <a
+                        href="https://www.debtcollectionexperts.com.au/terms-conditions.html"
+                        >Terms & Conditions</a
+                      >
+                    </li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+          </div>
+          <hr />
+          <div class="footer-bottom d-flex justify-content-between">
+            <div class="footer-copyright">
+              <p>
+                © 2024 Copyright,
+                <a href="https://www.debtcollectionexperts.com.au"
+                  >Debt Collection Expert</a
+                >. All Right Reserved.
+              </p>
+            </div>
+            <div class="footer-social">
+              <ul class="d-flex">
+                <li>
+                  <a href="#"><i class="fa-brands fa-x-twitter"></i></a>
+                </li>
+                <li>
+                  <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+                </li>
+                <li>
+                  <a href="#"><i class="fa-brands fa-instagram"></i></a>
+                </li>
+                <li>
+                  <a href="#"><i class="fa-brands fa-linkedin"></i></a>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+    </footer>
+
+    <!-- Footer Part HTML End -->
 
     <!-- JQuery -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.0/jquery.min.js"></script>
