--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
                   </li>
                   <li>
                     <a
-                      href="https://www.debtcollectionexperts.com.au/terms-of-use"
+                      href="https://www.debtcollectionexperts.com.au/terms-conditions.html"
                       >Terms of Use</a
                     >
                   </li>
@@ -1109,7 +1109,161 @@
                   </p>
                 </div>
               </div>
-              <div class="col-lg-6"></div>
+              <div class="col-lg-6">
+                <div class="accordion-container">
+                  <div
+                    class="accordion accordion-flush"
+                    id="accordionFlushExample"
+                  >
+                    <div class="accordion-item">
+                      <h2 class="accordion-header">
+                        <button
+                          class="accordion-button collapsed"
+                          type="button"
+                          data-bs-toggle="collapse"
+                          data-bs-target="#flush-collapseOne"
+                          aria-expanded="false"
+                          aria-controls="flush-collapseOne"
+                        >
+                          What is the role of a debt collector?
+                        </button>
+                      </h2>
+                      <div
+                        id="flush-collapseOne"
+                        class="accordion-collapse collapse"
+                        data-bs-parent="#accordionFlushExample"
+                      >
+                        <div class="accordion-body">
+                          <p>
+                            Debt collectors work on behalf of creditors to
+                            recover overdue payments from individuals or
+                            businesses. They use various strategies, including
+                            communication and, if necessary, legal action, to
+                            facilitate debt repayment.
+                          </p>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="accordion-item">
+                      <h2 class="accordion-header">
+                        <button
+                          class="accordion-button collapsed"
+                          type="button"
+                          data-bs-toggle="collapse"
+                          data-bs-target="#flush-collapseTwo"
+                          aria-expanded="false"
+                          aria-controls="flush-collapseTwo"
+                        >
+                          Is debt collection legal?
+                        </button>
+                      </h2>
+                      <div
+                        id="flush-collapseTwo"
+                        class="accordion-collapse collapse"
+                        data-bs-parent="#accordionFlushExample"
+                      >
+                        <div class="accordion-body">
+                          <p>
+                            Debt collectors work on behalf of creditors to
+                            recover overdue payments from individuals or
+                            businesses. They use various strategies, including
+                            communication and, if necessary, legal action, to
+                            facilitate debt repayment.
+                          </p>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="accordion-item">
+                      <h2 class="accordion-header">
+                        <button
+                          class="accordion-button collapsed"
+                          type="button"
+                          data-bs-toggle="collapse"
+                          data-bs-target="#flush-collapseThree"
+                          aria-expanded="false"
+                          aria-controls="flush-collapseThree"
+                        >
+                          Can I choose specific debt collection strategy?
+                        </button>
+                      </h2>
+                      <div
+                        id="flush-collapseThree"
+                        class="accordion-collapse collapse"
+                        data-bs-parent="#accordionFlushExample"
+                      >
+                        <div class="accordion-body">
+                          <p>
+                            Debt collectors work on behalf of creditors to
+                            recover overdue payments from individuals or
+                            businesses. They use various strategies, including
+                            communication and, if necessary, legal action, to
+                            facilitate debt repayment.
+                          </p>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="accordion-item">
+                      <h2 class="accordion-header">
+                        <button
+                          class="accordion-button collapsed"
+                          type="button"
+                          data-bs-toggle="collapse"
+                          data-bs-target="#flush-collapseFour"
+                          aria-expanded="false"
+                          aria-controls="flush-collapseFour"
+                        >
+                          What if the debtor refuses to cooperate?
+                        </button>
+                      </h2>
+                      <div
+                        id="flush-collapseFour"
+                        class="accordion-collapse collapse"
+                        data-bs-parent="#accordionFlushExample"
+                      >
+                        <div class="accordion-body">
+                          <p>
+                            Debt collectors work on behalf of creditors to
+                            recover overdue payments from individuals or
+                            businesses. They use various strategies, including
+                            communication and, if necessary, legal action, to
+                            facilitate debt repayment.
+                          </p>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="accordion-item">
+                      <h2 class="accordion-header">
+                        <button
+                          class="accordion-button collapsed"
+                          type="button"
+                          data-bs-toggle="collapse"
+                          data-bs-target="#flush-collapseFive"
+                          aria-expanded="false"
+                          aria-controls="flush-collapseFive"
+                        >
+                          How do you ensure compliance with debt collection
+                          laws?
+                        </button>
+                      </h2>
+                      <div
+                        id="flush-collapseFive"
+                        class="accordion-collapse collapse"
+                        data-bs-parent="#accordionFlushExample"
+                      >
+                        <div class="accordion-body">
+                          <p>
+                            Debt collectors work on behalf of creditors to
+                            recover overdue payments from individuals or
+                            businesses. They use various strategies, including
+                            communication and, if necessary, legal action, to
+                            facilitate debt repayment.
+                          </p>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
             </div>
           </div>
         </div>
