--- a/index.html
+++ b/index.html
@@ -1283,7 +1283,7 @@
                       <div class="swiper-slide">
                         <div
                           class="accordion accordion-flush"
-                          id="accordionFlushExample"
+                          id="accordionFlushExample2"
                         >
                           <div class="accordion-item">
                             <h2 class="accordion-header">
@@ -1291,15 +1291,15 @@
                                 class="accordion-button collapsed"
                                 type="button"
                                 data-bs-toggle="collapse"
-                                data-bs-target="#flush-collapseOne"
+                                data-bs-target="#flush-collapseSix"
                                 aria-expanded="false"
-                                aria-controls="flush-collapseOne"
+                                aria-controls="flush-collapseSix"
                               >
                                 What is the role of a debt collector?
                               </button>
                             </h2>
                             <div
-                              id="flush-collapseOne"
+                              id="flush-collapseSix"
                               class="accordion-collapse collapse"
                               data-bs-parent="#accordionFlushExample"
                             >
@@ -1320,15 +1320,15 @@
                                 class="accordion-button collapsed"
                                 type="button"
                                 data-bs-toggle="collapse"
-                                data-bs-target="#flush-collapseTwo"
+                                data-bs-target="#flush-collapseSeven"
                                 aria-expanded="false"
-                                aria-controls="flush-collapseTwo"
+                                aria-controls="flush-collapseSeven"
                               >
                                 Is debt collection legal?
                               </button>
                             </h2>
                             <div
-                              id="flush-collapseTwo"
+                              id="flush-collapseSeven"
                               class="accordion-collapse collapse"
                               data-bs-parent="#accordionFlushExample"
                             >
@@ -1349,15 +1349,15 @@
                                 class="accordion-button collapsed"
                                 type="button"
                                 data-bs-toggle="collapse"
-                                data-bs-target="#flush-collapseThree"
+                                data-bs-target="#flush-collapseEight"
                                 aria-expanded="false"
-                                aria-controls="flush-collapseThree"
+                                aria-controls="flush-collapseEight"
                               >
                                 Can I choose specific debt collection strategy?
                               </button>
                             </h2>
                             <div
-                              id="flush-collapseThree"
+                              id="flush-collapseEight"
                               class="accordion-collapse collapse"
                               data-bs-parent="#accordionFlushExample"
                             >
@@ -1378,15 +1378,15 @@
                                 class="accordion-button collapsed"
                                 type="button"
                                 data-bs-toggle="collapse"
-                                data-bs-target="#flush-collapseFour"
+                                data-bs-target="#flush-collapseNine"
                                 aria-expanded="false"
-                                aria-controls="flush-collapseFour"
+                                aria-controls="flush-collapseNine"
                               >
                                 What if the debtor refuses to cooperate?
                               </button>
                             </h2>
                             <div
-                              id="flush-collapseFour"
+                              id="flush-collapseNine"
                               class="accordion-collapse collapse"
                               data-bs-parent="#accordionFlushExample"
                             >
@@ -1407,16 +1407,16 @@
                                 class="accordion-button collapsed"
                                 type="button"
                                 data-bs-toggle="collapse"
-                                data-bs-target="#flush-collapseFive"
+                                data-bs-target="#flush-collapseTen"
                                 aria-expanded="false"
-                                aria-controls="flush-collapseFive"
+                                aria-controls="flush-collapseTen"
                               >
                                 How do you ensure compliance with debt
                                 collection laws?
                               </button>
                             </h2>
                             <div
-                              id="flush-collapseFive"
+                              id="flush-collapseTen"
                               class="accordion-collapse collapse"
                               data-bs-parent="#accordionFlushExample"
                             >
