Some issues are fixed

--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
             /></a>
           </div>
           <div class="mobile-call">
-            <a href="tel:0488160069"
+            <a href="tel:+61488160069"
               ><span class="material-symbols-outlined"> call </span></a
             >
           </div>
@@ -260,15 +260,41 @@
                 <li>
                   <a
                     target="_blank"
-                    href="https://www.instagram.com/elitesouthernconstruction"
-                    ><i class="fa-brands fa-instagram"></i
+                    href="https://www.facebook.com/excavatehobart"
+                    ><i class="fa-brands fa-facebook-f"></i
                   ></a>
                 </li>
                 <li>
                   <a
                     target="_blank"
-                    href="https://www.facebook.com/elitesouthernconstruction"
-                    ><i class="fa-brands fa-facebook-f"></i
+                    href="https://www.instagram.com/excavatehobart"
+                    ><i class="fa-brands fa-instagram"></i
+                  ></a>
+                </li>
+                <li>
+                  <a target="_blank" href="https://twitter.com/excavatehobart"
+                    ><i class="fa-brands fa-x-twitter"></i
+                  ></a>
+                </li>
+                <li>
+                  <a
+                    target="_blank"
+                    href="https://www.linkedin.com/company/excavatehobart"
+                    ><i class="fa-brands fa-linkedin"></i
+                  ></a>
+                </li>
+                <li>
+                  <a
+                    target="_blank"
+                    href="https://www.youtube.com/@excavatehobart"
+                    ><i class="fa-brands fa-youtube"></i
+                  ></a>
+                </li>
+                <li>
+                  <a
+                    target="_blank"
+                    href="https://www.pinterest.com/excavatehobart"
+                    ><i class="fa-brands fa-pinterest"></i
                   ></a>
                 </li>
               </ul>
@@ -318,7 +344,7 @@
                 </h1>
                 <div class="hero-buttons d-flex justify-content-center">
                   <div class="primary-btn pe-2 pe-md-3">
-                    <a href="#">CALL US</a>
+                    <a href="tel:+61488160069">CALL US</a>
                   </div>
                   <div class="primary-btn ps-2 ps-md-3">
                     <a
@@ -357,7 +383,7 @@
                   <div class="experts-img" data-aos="fade-right">
                     <img
                       loading="lazy"
-                      src="assets/images/home-experts-img.png"
+                      src="assets/images/home-experts-img.webp"
                       alt="home-experts-img"
                     />
                   </div>
@@ -496,7 +522,7 @@
             </div>
             <div class="d-flex justify-content-center">
               <div class="primary-btn pe-2 pe-md-3">
-                <a href="#">CALL US</a>
+                <a href="tel:+61488160069">CALL US</a>
               </div>
               <div class="primary-btn ps-2 ps-md-3">
                 <a
@@ -536,7 +562,7 @@
                     <div class="services-card-img">
                       <img
                         loading="lazy"
-                        src="assets/images/commercial-debt-collection-img.png"
+                        src="assets/images/commercial-debt-collection-img.webp"
                         alt="commercial-debt-collection-img"
                       />
                     </div>
@@ -547,14 +573,14 @@
                         collecting overdue payments that businesses owe to each
                         other.
                       </p>
-                      <div class="learn-more-btn">
-                        <a
-                          href="https://www.debtcollectionexperts.com.au/commercial-debt-collection.html"
-                          >Learn more <i class="fa-solid fa-arrow-right"></i>
-                        </a>
-                      </div>
                     </div>
                   </a>
+                  <div class="learn-more-btn">
+                    <a
+                      href="https://www.debtcollectionexperts.com.au/commercial-debt-collection.html"
+                      >Learn more <i class="fa-solid fa-arrow-right"></i>
+                    </a>
+                  </div>
                 </article>
               </div>
               <div class="col-md-6 col-lg-4">
@@ -565,7 +591,7 @@
                     <div class="services-card-img">
                       <img
                         loading="lazy"
-                        src="assets/images/consumer-debt-collection-img.png"
+                        src="assets/images/consumer-debt-collection-img.webp"
                         alt="consumer-debt-collection-img"
                       />
                     </div>
@@ -576,14 +602,14 @@
                         collecting overdue payments that businesses owe to each
                         other.
                       </p>
-                      <div class="learn-more-btn">
-                        <a
-                          href="https://www.debtcollectionexperts.com.au/debt-collection.html"
-                          >Learn more <i class="fa-solid fa-arrow-right"></i>
-                        </a>
-                      </div>
                     </div>
                   </a>
+                  <div class="learn-more-btn">
+                    <a
+                      href="https://www.debtcollectionexperts.com.au/debt-collection.html"
+                      >Learn more <i class="fa-solid fa-arrow-right"></i>
+                    </a>
+                  </div>
                 </article>
               </div>
               <div class="col-md-6 col-lg-4">
@@ -594,7 +620,7 @@
                     <div class="services-card-img">
                       <img
                         loading="lazy"
-                        src="assets/images/debt-collector-and-tracking-img.png"
+                        src="assets/images/debt-collector-and-tracking-img.webp"
                         alt="debt-collector-and-tracking-img"
                       />
                     </div>
@@ -605,14 +631,14 @@
                         collecting overdue payments that businesses owe to each
                         other.
                       </p>
-                      <div class="learn-more-btn">
-                        <a
-                          href="https://www.debtcollectionexperts.com.au/debt-collector.html"
-                          >Learn more <i class="fa-solid fa-arrow-right"></i>
-                        </a>
-                      </div>
                     </div>
                   </a>
+                  <div class="learn-more-btn">
+                    <a
+                      href="https://www.debtcollectionexperts.com.au/debt-collector.html"
+                      >Learn more <i class="fa-solid fa-arrow-right"></i>
+                    </a>
+                  </div>
                 </article>
               </div>
               <div class="col-md-6 col-lg-4">
@@ -623,7 +649,7 @@
                     <div class="services-card-img">
                       <img
                         loading="lazy"
-                        src="assets/images/debt-recovery-img.png"
+                        src="assets/images/debt-recovery-img.webp"
                         alt="debt-recovery-img"
                       />
                     </div>
@@ -634,14 +660,14 @@
                         collecting overdue payments that businesses owe to each
                         other.
                       </p>
-                      <div class="learn-more-btn">
-                        <a
-                          href="https://www.debtcollectionexperts.com.au/debt-recovery.html"
-                          >Learn more <i class="fa-solid fa-arrow-right"></i>
-                        </a>
-                      </div>
                     </div>
                   </a>
+                  <div class="learn-more-btn">
+                    <a
+                      href="https://www.debtcollectionexperts.com.au/debt-recovery.html"
+                      >Learn more <i class="fa-solid fa-arrow-right"></i>
+                    </a>
+                  </div>
                 </article>
               </div>
               <div class="col-md-6 col-lg-4">
@@ -652,7 +678,7 @@
                     <div class="services-card-img">
                       <img
                         loading="lazy"
-                        src="assets/images/personal-debt-collection-img.png"
+                        src="assets/images/personal-debt-collection-img.webp"
                         alt="personal-debt-collection"
                       />
                     </div>
@@ -663,14 +689,14 @@
                         collecting overdue payments that businesses owe to each
                         other.
                       </p>
-                      <div class="learn-more-btn">
-                        <a
-                          href="https://www.debtcollectionexperts.com.au/personal-debt-collection.html"
-                          >Learn more <i class="fa-solid fa-arrow-right"></i>
-                        </a>
-                      </div>
                     </div>
                   </a>
+                  <div class="learn-more-btn">
+                    <a
+                      href="https://www.debtcollectionexperts.com.au/personal-debt-collection.html"
+                      >Learn more <i class="fa-solid fa-arrow-right"></i>
+                    </a>
+                  </div>
                 </article>
               </div>
               <div class="col-md-6 col-lg-4">
@@ -681,7 +707,7 @@
                     <div class="services-card-img">
                       <img
                         loading="lazy"
-                        src="assets/images/small-business-debt-collection-img.png"
+                        src="assets/images/small-business-debt-collection-img.webp"
                         alt="small-business-debt-collection-img"
                       />
                     </div>
@@ -692,14 +718,14 @@
                         collecting overdue payments that businesses owe to each
                         other.
                       </p>
-                      <div class="learn-more-btn">
-                        <a
-                          href="https://www.debtcollectionexperts.com.au/personal-debt-collection.html"
-                          >Learn more <i class="fa-solid fa-arrow-right"></i>
-                        </a>
-                      </div>
                     </div>
                   </a>
+                  <div class="learn-more-btn">
+                    <a
+                      href="https://www.debtcollectionexperts.com.au/personal-debt-collection.html"
+                      >Learn more <i class="fa-solid fa-arrow-right"></i>
+                    </a>
+                  </div>
                 </article>
               </div>
             </div>
@@ -734,7 +760,7 @@
                   </p>
                   <div class="guarantee-buttons d-flex pt-4">
                     <div class="primary-btn pe-2 pe-md-3">
-                      <a href="#">CALL US</a>
+                      <a href="tel:+61488160069">CALL US</a>
                     </div>
                     <div class="primary-btn ps-2 ps-md-3">
                       <a
@@ -754,7 +780,7 @@
                 <div class="guarantee-img" data-aos="fade-up-left">
                   <img
                     loading="lazy"
-                    src="assets/images/no-collection-no-fee-guarantee.png"
+                    src="assets/images/no-collection-no-fee-guarantee.webp"
                     alt="no-collection-no-fee-guarantee-img"
                   />
                 </div>
@@ -957,7 +983,7 @@
                 <div class="specialise-card" data-aos="zoom-in-right">
                   <img
                     loading="lazy"
-                    src="assets/images/hobart-thumb.png"
+                    src="assets/images/hobart-thumb.webp"
                     alt="hobart-thumb"
                   />
                   <div class="learn-more-btn">
@@ -975,7 +1001,7 @@
                 >
                   <img
                     loading="lazy"
-                    src="assets/images/launceston-thumb.png"
+                    src="assets/images/launceston-thumb.webp"
                     alt="launceston-thumb"
                   />
                   <div class="learn-more-btn">
@@ -1012,7 +1038,7 @@
                   <div class="work-card-img position-relative">
                     <img
                       loading="lazy"
-                      src="assets/images/assesment-img.png"
+                      src="assets/images/assesment-img.webp"
                       alt="assesment-img"
                     />
                     <div class="step-tag">
@@ -1035,7 +1061,7 @@
                   <div class="work-card-img position-relative">
                     <img
                       loading="lazy"
-                      src="assets/images/communication-img.png"
+                      src="assets/images/communication-img.webp"
                       alt="communication-img"
                     />
                     <div class="step-tag">
@@ -1058,7 +1084,7 @@
                   <div class="work-card-img position-relative">
                     <img
                       loading="lazy"
-                      src="assets/images/negotiation-img.png"
+                      src="assets/images/negotiation-img.webp"
                       alt="negotiation-img"
                     />
                     <div class="step-tag">
@@ -1082,7 +1108,7 @@
                   <div class="work-card-img position-relative">
                     <img
                       loading="lazy"
-                      src="assets/images/enforcement-img.png"
+                      src="assets/images/enforcement-img.webp"
                       alt="enforcement-img"
                     />
                     <div class="step-tag">
@@ -1563,7 +1589,7 @@
                         >Email us</a
                       >
                     </li>
-                    <li><a href="tel:123456789">Call us</a></li>
+                    <li><a href="tel:+61488160069">Call us</a></li>
                   </ul>
                 </div>
               </div>
@@ -1605,16 +1631,44 @@
             <div class="footer-social">
               <ul class="d-flex">
                 <li>
-                  <a href="#"><i class="fa-brands fa-x-twitter"></i></a>
+                  <a target="_blank" href="https://twitter.com/excavatehobart"
+                    ><i class="fa-brands fa-x-twitter"></i
+                  ></a>
                 </li>
                 <li>
-                  <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+                  <a
+                    target="_blank"
+                    href="https://www.facebook.com/excavatehobart"
+                    ><i class="fa-brands fa-facebook-f"></i
+                  ></a>
                 </li>
                 <li>
-                  <a href="#"><i class="fa-brands fa-instagram"></i></a>
+                  <a
+                    target="_blank"
+                    href="https://www.instagram.com/excavatehobart"
+                    ><i class="fa-brands fa-instagram"></i
+                  ></a>
                 </li>
                 <li>
-                  <a href="#"><i class="fa-brands fa-linkedin"></i></a>
+                  <a
+                    target="_blank"
+                    href="https://www.linkedin.com/company/excavatehobart"
+                    ><i class="fa-brands fa-linkedin"></i
+                  ></a>
+                </li>
+                <li>
+                  <a
+                    target="_blank"
+                    href="https://www.youtube.com/@excavatehobart"
+                    ><i class="fa-brands fa-youtube"></i
+                  ></a>
+                </li>
+                <li>
+                  <a
+                    target="_blank"
+                    href="https://www.pinterest.com/excavatehobart"
+                    ><i class="fa-brands fa-pinterest"></i
+                  ></a>
                 </li>
               </ul>
             </div>
